# malls_convertor

./: .gitignore  AdScreen.spec  AdScreen_Setup.iss  app.py  app.py.bak  build_mac.sh  build_windows.bat  core.py  export_comps.jsx  generate_specs.py  launcher.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  smart_crop.py
img/: adscreen.icns
templates/: bayside_digi_impact.json  boardwalk.json  brooklyn_mall.json  canal_walk_centre_court.json  canal_walk_cube_court.json  canal_walk_food_court.json  canal_walk_retail_left.json  canal_walk_retail_right.json  cape_gate_checkers.json  cape_gate_clicks_woolworths.json  capegate_food_court.json  clearwater_food_court.json  clearwater_mugg_and_bean.json  clearwater_pick_n_pay.json  cresta_food_court.json  cresta_mugg_and_bean_impact.json  cresta_woolworth_screen.json  digi_engage.json  digi_icon.json  digi_impact.json  fourways_promo_court.json  gardens_digi_impact.json  gateway_digi_impact.json  golden_acre_impact.json  hd_1920x1080.json  hype_park.json  landscape.json  landscape_digi_icon_mtv.json  landscape_narrow.json  loch_logan.json  menlyn_aviary_court.json  menlyn_cape_union_mart.json  menlyn_cavendish_court.json  menlyn_earthchild.json  menlyn_food_court.json  menlyn_sky.json  menlyn_yuppie_chef.json  monte_casino_exit_to_piazza.json  monte_casino_fego.json  monte_casino_grand_staircase.json  (+20 more)
